Fixing alignment

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,3 @@ a {
 	background: #fff
 }
 
-main image {
-
-}
-
